CamlIDL 1.09:
-------------

* Revert a problematic change of default configuration
  (cpp -traditional instead of cpp)

CamlIDL 1.08:
-------------

* Update to OCaml 4.09 and up
* Support more IDL features: import lists, fixed-width integer types
  (int8, int32, etc), MIDL-stlye nonencapsulatedu unions
  (pull request #13, Philipp Gesang)
* Generate C code that respects CAML_NAME_SPACE
* The runtime library referenced a IID_IUnknown symbol that could
  not be resolved under Unix (pull request #15, Github user ygrek)

CamlIDL 1.07:
-------------

* Update to OCaml 4.06 and up (issues #6 and #11).
* Auto-link the C runtime library from com.cma and com.cmxa (issue #8).
* Re-license the compiler under the LGPL v2.1 (instead of the QPL 1.0).

CamlIDL 1.06:
-------------

* Update to OCaml 4.03.
* Avoid name clash on Array module.

CamlIDL 1.05:
-------------

* Update to the new representation of objects introduced in OCaml 3.08.
* Fixed compiler failure with bigarrays of "const" elements.
* Fixed bug in conversion from C's signed char to Caml's char type.
* Function declarations support the [mlname] attribute (to set the
  Caml name of the function) and the [blocking] attribute (for long-running
  C functions).
* Fixed cpp preprocessing problem on MacOS X 10.2 and later.
* Fixed bug in conversion from a struct of floats to a Caml record of floats.
* Fixed incorrect initialization of DLL generated for a COM component.

CamlIDL 1.04:
-------------

* Fixed silly bug in abstract typedefs, introduced in 1.03.
* Strings, arrays and bigarrays are now non-NULL if "unique" is not specified,
  even if the pointer default is "unique".
* "out" parameters dependent on "out" parameters are now removed from
  the Caml view of a function.
* Removed spurious warning on the "mlname" attribute.

CamlIDL 1.03:
-------------

* Revised handling of integer constants, which can now be of Caml boxed int
  types (int32, int64, nativeint).