@@ -179,8 +179,8 @@ let rec out_ml_type oc ty =
       | Ignore -> assert false
       end
   | Type_array(attr, ty) ->
-      if attr.is_string
-      then fprintf oc "string"
+      if attr.is_string then fprintf oc "string"
+      else if attr.is_bytes then fprintf oc "bytes"
       else fprintf oc "%a array" out_ml_type ty;
       if attr.maybe_null
       then fprintf oc " option"
